--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body {
 }
 
 .cms-installer {
-  font-family: "Inter", system-ui;
   padding-block: 30px;
   padding-inline: 33px;
   min-block-size: 80%;
@@ -65,6 +64,7 @@ h1 {
 .cms-installer__wrapper {
   display: flex;
   place-items: center;
+  text-align: center;
 }
 
 .cms-installer__main {
@@ -107,8 +107,8 @@ h1 {
 }
 
 h2 {
-  font-size: 2.75rem;
-  font-weight: 700;
+  font-size: 1.875rem;
+  font-weight: 600;
   margin-block-start: 0;
   line-height: 1.3;
 }
@@ -124,4 +124,6 @@ p {
   background-position: center;
   block-size: 3rem;
   inline-size: 3rem;
+  margin: auto;
+  padding-bottom: 2rem;
 }
